# MyDistinctAi

./: .env.example  .env.local  .env.production.example  .gitignore  .npmrc  .vercelignore  AI_TEST_PROMPTS.md  API_REFERENCE_REMOVAL.md  AUTOMATED_COMPLETION_SUMMARY.md  BUGFIX_SUMMARY.md  CHAT_503_FIX.md  CHAT_TEST_RESULTS.md  CHECK_SERVER_LOGS.md  CLAUDE.md  CLIENT_FEATURE_GUIDE.md  CLIENT_PROJECT_UPDATE.md  COMPREHENSIVE_TEST_RESULTS.md  CONSOLE_ERRORS_ANALYSIS.md  CRITICAL_BUG_FOUND.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_NOV17_2025.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DESKTOP_APP_FIXED.md  DESKTOP_APP_README.md  DESKTOP_APP_SUCCESS.md  DESKTOP_APP_TEST_PLAN.md  DESKTOP_BUILD_GUIDE.md  DESKTOP_COMPONENTS_COMPLETE.md  DESKTOP_CONVERSION_PROMPT.md  DESKTOP_FEATURE_PARITY_PROMPT.md  DESKTOP_INTEGRATION_COMPLETE.md  DESKTOP_OLLAMA_TEST_RESULTS.md  DESKTOP_ONBOARDING_FEATURES.md  DESKTOP_TEST_GUIDE.md  DESKTOP_TEST_RESULTS.md  DESKTOP_UX_IMPROVEMENTS.md  FINAL_503_FIX.md  FINAL_DIAGNOSIS.md  FINAL_FIX_REQUIRED.md  (+136 more)
.claude/: settings.local.json
docs/: PROJECT_STATUS.md
scripts/: 001_initial_schema.sql  002_fix_user_insert_policy.sql  002_token_tracking_system.sql  003_fix_rls_policy.sql  README_MIGRATION.md  apply-migration.mjs  build-desktop.js  check-policies.sql  create-test-user.mjs  debug_users_table.sql  run-worker.mjs  (+11 more)
src-tauri/: Cargo.toml  loading.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  encryption.rs  error.rs  file_processor.rs  lancedb.rs  main.rs  ollama.rs  storage.rs
(+215 files in other folders)
