[package]
name = "mydistinctai"
version = "0.1.0"
description = "Your private AI studio - offline, encrypted, and trained on you"
authors = ["MyDistinctAI Team"]
license = "MIT"
repository = "https://github.com/yourusername/mydistinctai"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lancedb = "0.9"
arrow = "52.2"
arrow-array = "52.2"
arrow-schema = "52.2"
lopdf = "0.32"
docx-rs = "0.4"
unicode-segmentation = "1.11"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
